# igroteka

./: .dev.vars.example  .gitignore  CLAUDE.md  FORTOCHKA.md  HANDOFF.md  PLAN.md  README.md  RELEASE-NOTES.md  dev-serve.py  wrangler.toml
fortochka/: CMakeLists.txt  README.md  RECON.md  rtw-imports.json
fortochka/corpus/: Makefile
fortochka/corpus/crt/: crt.c
fortochka/corpus/crt2/: crt2.c
fortochka/corpus/d3dclear/: d3dclear.c
fortochka/corpus/d3dinit/: d3dinit.c
fortochka/corpus/dirscan/: dirscan.c
fortochka/corpus/fftri/: fftri.c
fortochka/corpus/fpu/: fpu.c
fortochka/corpus/gpa/: gpa.c
fortochka/corpus/hello/: hello.c
fortochka/corpus/itri/: itri.c
fortochka/corpus/krt/: krt.c
fortochka/corpus/paint/: paint.c
fortochka/corpus/pump/: pump.c
fortochka/corpus/recurse/: recurse.c
fortochka/corpus/reg/: reg.c
fortochka/corpus/rstest/: rstest.c
fortochka/corpus/seh/: seh.c
fortochka/corpus/seh_chain/: seh_chain.c
fortochka/corpus/seh_noncont/: seh_noncont.c
fortochka/corpus/sysinit/: sysinit.c
fortochka/corpus/tex/: tex.c
fortochka/corpus/tex_evil/: tex_evil.c
fortochka/corpus/threads/: threads.c
fortochka/corpus/tri/: tri.c
fortochka/corpus/tri_evil/: tri_evil.c
fortochka/corpus/vb_evil/: vb_evil.c
fortochka/corpus/vbtri/: vbtri.c
fortochka/corpus/vfs/: vfs.c
fortochka/corpus/window/: window.c
fortochka/corpus/winmgr/: winmgr.c
fortochka/d9web/: CMakeLists.txt  NOTES-d3d8-codex.md
fortochka/d9web/src/: d9web.cpp
fortochka/k32web/: CMakeLists.txt
fortochka/k32web/src/: k32web.cpp
fortochka/peload/: CMakeLists.txt
fortochka/peload/src/: peload.cpp
fortochka/runtime/: CMakeLists.txt  zhrun.cpp
fortochka/runtime/src/: machine.cpp
fortochka/sysweb/: CMakeLists.txt
fortochka/tools/: pescope.py
fortochka/u32web/: CMakeLists.txt
fortochka/zhelezo/: CMakeLists.txt
fortochka/zhelezo/src/: insn.h  (+3 more)
(+81 files in other folders)
